# CasADi_MPC_MHE_CPP

./: .gitignore  CMakeLists.txt  README.md
MPC/: CMakeLists.txt
MPC/mul_shooting/: CMakeLists.txt
MPC/mul_shooting/src/: ca_multi_shooting.cpp  ca_multi_shooting_lib.cpp  ca_multi_shooting_opt.cpp
MPC/quadrotor/: CMakeLists.txt
MPC/quadrotor/include/: derivation_uav.hpp  dmoc_quadrotor.hpp  mpc_quadrotor.hpp
MPC/quadrotor/src/: dmoc_quadrotor_controller.cpp  mpc_quadrotor_controller.cpp  quadrotor_controller.cpp
MPC/quadrotor/src/model/: dmoc_quadrotor.cpp  mpc_quadrotor.cpp
UAVm/: CMakeLists.txt
UAVm/include/: derivation_uav_manipulator_pos_force.hpp  dmcc_base.hpp  dmcc_uav_manipulator.hpp
UAVm/src/: uav_manipulator_cpc_planner.cpp  uav_manipulator_fp_planner.cpp
UAVm/src/models/: dmcc_uav_manipulator.cpp
include/: dmcc_base.hpp
